Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22420

CompilationDatabaseProjectManager: crashes qtcreator when the project's .json file is modified

XMLWordPrintable

    • Linux/X11
    • 0ffbe6a9e4cf2e6a03eb36d571913dd7e1ca5f62 (qt-creator/qt-creator/master)

      The m_fileSystemWatcher triggers a reparseProject when the compilation_database.json is modified. This often leads to crashes with various different backtraces (see attachment).

      To reproduced load a compilation_database.json project (6000 lines, but also shows up when reduced to 30 lines), open a .cpp file from it and touch the .json file repeatedly while Qt Creator is focused and in use: while sleep 1; echo .; do touch compile_commands.json; sleep 0.2; touch compile_commands.json; done.

      This also happens when the sleep-interval is made large enough for the previously triggered project parsing to finish.
       
      On the master branch (dd9086530f4b6164c452a7849b3ba37cb063bea1).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            tmmz Thomas Otto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes