src/plugins/compilationdatabaseprojectmanager/compilationdatabaseproject.h
@@ -25,13 +25,18 @@
 
 #pragma once
 
+#include "compilationdatabaseutils.h"
+
 #include <projectexplorer/buildconfiguration.h>
 #include <projectexplorer/project.h>
-#include <projectexplorer/treescanner.h>
 #include <texteditor/texteditor.h>
 #include <utils/filesystemwatcher.h>
 
 #include <QFutureWatcher>
+
+QT_BEGIN_NAMESPACE
+class QTimer;
+QT_END_NAMESPACE
 
 namespace CppTools {
 class CppProjectUpdater;
@@ -43,6 +48,7 @@ class Kit;
 
 namespace CompilationDatabaseProjectManager {
 namespace Internal {
+class CompilationDbParser;
 
 class CompilationDatabaseProject : public ProjectExplorer::Project
 {
@@ -58,15 +64,16 @@ private:
     RestoreResult fromMap(const QVariantMap &map, QString *errorMessage) override;
 
     void reparseProject();
-    void buildTreeAndProjectParts(const Utils::FileName &projectFile);
+    void buildTreeAndProjectParts();
     Utils::FileName rootPathFromSettings() const;
 
     QFutureWatcher<void> m_parserWatcher;
     std::unique_ptr<CppTools::CppProjectUpdater> m_cppCodeModelUpdater;
     std::unique_ptr<ProjectExplorer::Kit> m_kit;
     Utils::FileSystemWatcher m_fileSystemWatcher;
-    ProjectExplorer::TreeScanner m_treeScanner;
-    QHash<QString, bool> m_mimeBinaryCache;
+    MimeBinaryCache m_mimeBinaryCache;
+    QTimer * const m_parseDelay;
+    CompilationDbParser *m_parser = nullptr;
     bool m_hasTarget = false;
 };
 
