src/plugins/compilationdatabaseprojectmanager/compilationdatabaseprojectmanager.pro
@@ -3,13 +3,15 @@ include(../../qtcreatorplugin.pri)
 SOURCES = \
     compilationdatabaseproject.cpp \
     compilationdatabaseprojectmanagerplugin.cpp \
-    compilationdatabaseutils.cpp
+    compilationdatabaseutils.cpp \
+    compilationdbparser.cpp
 
 HEADERS = \
     compilationdatabaseproject.h \
     compilationdatabaseprojectmanagerplugin.h \
     compilationdatabaseconstants.h \
-    compilationdatabaseutils.h
+    compilationdatabaseutils.h \
+    compilationdbparser.h
 
 equals(TEST, 1) {
     HEADERS += \
